@@ -1,3 +1,4 @@
+0.92.3-0 @05/10/2005 23:20:00 UTC@
 0.92.2-0 @05/05/2005 02:45:00 UTC@
 0.92.1-0 @04/21/2005 15:05:00 UTC@
 0.92.0-0 @01/18/2005 16:00:00 UTC@
